update: Mejora de análisis de respuesta y añadido pequeño tweak en la separación de oraciones en un intento de que funcione con español, tal vez...

--- a/PruebaEntrada_CC3S2.ipynb
+++ b/PruebaEntrada_CC3S2.ipynb
@@ -81,7 +81,7 @@
         "\n",
         "# Dividir oraciones en palabras\n",
         "def sentence_segmentation(sentence):\n",
-        "    pattern = re.compile(r'\\b\\w*[.!?]?\\b')\n",
+        "    pattern = re.compile(r'[¿¡]?\\b\\w*[.!?]?\\b')\n",
         "    return [word for word in pattern.findall(sentence) if word.strip()]"
       ]
     },
@@ -330,7 +330,9 @@
         "s2 = \"Londinium\"\n",
         "distancia = levenshtein.calculate(s1, s2)\n",
         "\n",
-        "print(f\"Distancia de Levenshtein entre '{s1}' y '{s2}' es {distancia}\")"
+        "print(f\"Distancia de Levenshtein entre '{s1}' y '{s2}' es {distancia}\")\n",
+        "\n",
+        "# https://es.wikipedia.org/wiki/Distancia_de_Levenshtein"
       ]
     },
     {
@@ -538,7 +540,8 @@
       "source": [
         "En cuanto al análisis, si bien se intentó mejorar el algoritmo visto en clase no pude hacerlo, es un pequeño problema de lógica así que la mejora empieza por ahí.\n",
         "Por otro lado se ha establecido el pipeline de tal forma que acepta inyección de dependencias por si se quiere cambiar a otro tipo de algoritmo de tokenización como podría ser el caso del Scaffold-BPE, al igual que otro tipo de disntancia diferente a levenshtein.\n",
-        "Sin embargo, aunque las mejoras están en el pipeline, el punto más flojo de este código está en mi implementación del algoritmo BPE, con un poco más de trabajo daría mejores resultados."
+        "Sin embargo, aunque las mejoras están en el pipeline, el punto más flojo de este código está en mi implementación del algoritmo BPE, con un poco más de trabajo daría mejores resultados.\n",
+        "Además, detalle importante es que si bien hay un pequeño tweak para que intente trabajar con oraciones en español al menos en la separación de oraciones, el pipeline solo ha sido pensado para el idioma inglés."
       ]
     }
   ],
